<resources>
    <string name="app_name">Pick and drop</string>
    <string name="map_key">AIzaSyDORqTwLh_1aV5C_xvf8439hJdE3i1Tqh0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick n Drop</string>
    <string name="nav_header_subtitle">contactus@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="registration_as">Join us as</string>
    <string name="enter_email">Enter Email</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Enter Full Name</string>
    <string name="_92">+92</string>
    <string name="phone_no">330*******</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Enter Full Address</string>
    <string name="next">Register Now</string>
    <string name="upload_cnic_front_side">Upload CNIC (Front Side)</string>
    <string name="upload_cnic_back_side">Upload CNIC (Back Side)</string>
    <string name="verification">Verification</string>
    <string name="text_phone_number">Please enter the verification code we sent to your phone number.</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="menu_home">Home</string>
    <string name="start_trip">Start trip</string>
    <string name="welcome_in">Welcome</string>
    <string name="no_thing_found">nothing found</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="invite_friends">Invite Frineds</string>
    <string name="edit_vehicle">Vehicle Information</string>
</resources>