<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Registration"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="125dp"
            android:layout_height="115dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/bussdriver"
            app:civ_border_color="@color/white"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_circle_background_color="@color/green" />

        <TextView
            android:id="@+id/imageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="upload image"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/personal_info"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/green"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                tools:ignore="autofill,TextContrastCheck"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:minWidth="48dp"
                android:paddingEnd="5dp"
                android:focusableInTouchMode="false"
                android:text="@string/_92"
                android:textColor="@color/green"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/green"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                tools:ignore="autofill,TextContrastCheck"/>
        </LinearLayout>


        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/green"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            tools:ignore="autofill,TextContrastCheck"/>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                tools:ignore="autofill,TextContrastCheck"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/green"
                android:textColorHint="@color/green"
                tools:ignore="autofill,TextContrastCheck"/>
        </LinearLayout>



        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/green"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green"
            tools:ignore="autofill,TextContrastCheck"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/h_white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/cnicFrontSide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/upload_cnic_front_side"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/cnicFrontSideButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/h_white"
                android:scaleType="centerCrop"
                android:src="@drawable/folder"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/h_white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/cnicBackSide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/upload_cnic_back_side"
                android:textColor="@color/green"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/cnicBackSideButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/h_white"
                android:scaleType="centerCrop"
                android:src="@drawable/folder"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>



        <Button
            android:id="@+id/registration_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:minHeight="48dp"
            android:text="@string/next"
            android:textSize="20sp"
            app:backgroundTint="@null"/>
    </LinearLayout>
</ScrollView>