<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/verifyScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:padding="5dp"
            android:src="@drawable/phone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/verification"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_phone_number"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/h_white"
            android:textColor="@color/black"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/green"
            app:lineWidth="1dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:padding="6dp"
            android:text="@string/resend_code"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="348dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:minHeight="48dp"
                android:text="@string/verify_code"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>